--- a/index.html
+++ b/index.html
@@ -734,6 +734,7 @@
         <h2>Contact<span class="period-mark">.</span></h2>
         <ul>
           <li><a href="mailto:ses1238@gmail.com">이메일</a></li>
+          <li><a href="https://github.com/ses9892">Github</a></li>
         </ul>
       </section>
     </div>
